--- a/index.html
+++ b/index.html
@@ -42,28 +42,36 @@
         <div class="container">
             <div class="row">  
                 <div class="col-lg-12">
-                    <div class="title"><span>Blogum</span></div>
-                </div>
-                <div class="col-lg-8 left-blog">
-                    <div class="content">
-                        <a class="content-item" v-for="(item, index) in blog" href="?id={{index}})">        
-                            <img :src="item.image" alt="">       
-                            <div class="content-item-text">
-                                <h5 class="content-item-title">{{item.title}}</h5>
-                                <p class="content-item-p">{{item.content.slice(0,10)}}</p>
-                                <span class="content-item-date">{{item.date}}</span>                    
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 sidebar" style="height: auto !important;">
-                    <div class="searchform">
-                        <form method="get" id="searchform" action="">
-                            <input type="search" placeholder="Arama Yap" name="s" id="s" value="">
-                            <button type="submit" id="searchsubmit"><i class="fas fa-search"></i></button>
-                        </form>
-                    </div>
-                    
+                    <div class="title"><span>Works</span></div>              
+                    <div class="portfolio">
+                        <div class="col-sm-12 col-lg-4 col-md-6">
+                            <a class="portfolio-item">        
+                                <img src="VA.png" alt="">       
+                                <div class="portfolio-item-text">                                   
+                                    <span class="portfolio-item-tag">Backend</span>    
+                                    <h5 class="portfolio-item-title">Virtual Airlines Management System</h5>                  
+                                </div>
+                            </a>
+                        </div>  
+                        <div class="col-sm-12 col-lg-4 col-md-6">
+                            <a class="portfolio-item">        
+                                <img src="aura.png" alt="">       
+                                <div class="portfolio-item-text">                                   
+                                    <span class="portfolio-item-tag">Fullstack</span>    
+                                    <h5 class="portfolio-item-title">XPLAYZ</h5>                  
+                                </div>
+                            </a>
+                        </div>     
+                        <div class="col-sm-12 col-lg-4 col-md-6">
+                            <a class="portfolio-item">        
+                                <img src="mun-manager2k19.png" alt="">       
+                                <div class="portfolio-item-text">                                   
+                                    <span class="portfolio-item-tag">Fullstack</span>    
+                                    <h5 class="portfolio-item-title">MunManager</h5>                  
+                                </div>
+                            </a>
+                        </div>                      
+                    </div>             
                 </div>
             </div>
         </div>
