--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
                 <div class="nav">
                     <ul id="menu">
                         <li class="active"><a href="index.html">Anasayfa</a></li>
-                        <li><a href="#">İletişim</a></li>
-                        <li><a href="#">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="mobile">
@@ -44,33 +42,15 @@
                 <div class="col-lg-12">
                     <div class="title"><span>Works</span></div>              
                     <div class="portfolio">
-                        <div class="col-sm-12 col-lg-4 col-md-6">
+                        <div class="col-sm-12 col-lg-4 col-md-6" >
                             <a class="portfolio-item">        
-                                <img src="VA.png" alt="">       
+                                <img src="" alt="">       
                                 <div class="portfolio-item-text">                                   
                                     <span class="portfolio-item-tag">Backend</span>    
                                     <h5 class="portfolio-item-title">Virtual Airlines Management System</h5>                  
                                 </div>
                             </a>
-                        </div>  
-                        <div class="col-sm-12 col-lg-4 col-md-6">
-                            <a class="portfolio-item">        
-                                <img src="aura.png" alt="">       
-                                <div class="portfolio-item-text">                                   
-                                    <span class="portfolio-item-tag">Fullstack</span>    
-                                    <h5 class="portfolio-item-title">XPLAYZ</h5>                  
-                                </div>
-                            </a>
-                        </div>     
-                        <div class="col-sm-12 col-lg-4 col-md-6">
-                            <a class="portfolio-item">        
-                                <img src="mun-manager2k19.png" alt="">       
-                                <div class="portfolio-item-text">                                   
-                                    <span class="portfolio-item-tag">Fullstack</span>    
-                                    <h5 class="portfolio-item-title">MunManager</h5>                  
-                                </div>
-                            </a>
-                        </div>                      
+                        </div>                       
                     </div>             
                 </div>
             </div>
