--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 <div class="col-lg-12">
                     <div class="title"><span>Works</span></div>              
                     <div class="portfolio">
-                        <div class="col-sm-12 col-lg-4 col-md-6" >
+                        <div class="col-sm-12 col-lg-4 col-md-6" v-for="item in port">
                             <a class="portfolio-item">        
-                                <img src="" alt="">       
+                                <img :src="item.image" alt="">       
                                 <div class="portfolio-item-text">                                   
-                                    <span class="portfolio-item-tag">Backend</span>    
-                                    <h5 class="portfolio-item-title">Virtual Airlines Management System</h5>                  
+                                    <span class="portfolio-item-tag">{{item.tag}}</span>    
+                                    <h5 class="portfolio-item-title">{{item.title}}</h5>                  
                                 </div>
                             </a>
                         </div>                       
