--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Serhat Gündoğdu</title> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/theme.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
@@ -61,7 +61,7 @@
 
             </div>
         </div>
-        <div class="footer">
+        <div class="footer" style="bottom: 0;">
             <div class="container d-flex justify-content-between align-items-center h-100">
         
                 <div>Made with <i class="fas fa-coffee"></i>, <i class="fas fa-heart"></i> and Serhat Gündoğdu</div>
