--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <!-- header end-->
 
-        <!-- Blog-->
+        <!-- Portfolio-->
         <div class="container">
             <div class="row">  
                 <div class="col-lg-12">
