--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
         <div class="container">
             <div class="row">  
                 <div class="col-lg-12">
+                    <div class="title"><span>Education</span></div>  
+                     <div class="education swiper-container">
+                        <div class="swiper-wrapper"> 
+                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide">
+                                <a class="education-item">
+                                    <i class="fas fa-graduation-cap"></i>
+                                    <div class="education-item-right">
+                                        <h3 class="education-item-title">Bahçeşehir Anatolian High School</h1>
+                                        <span class="education-item-year">2017-2020</span>
+                                    </div>
+                                </a>
+                            </div>          
+                         </div>
+                        <div class="swiper-pagination"></div>
+                     </div>
                     <div class="title"><span>Works</span></div>              
                     <div class="portfolio">
                         <div class="col-sm-12 col-lg-4 col-md-6" v-for="item in port">
