--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/theme.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
@@ -43,18 +44,18 @@
                     <div class="title"><span>Education</span></div>  
                      <div class="education swiper-container">
                         <div class="swiper-wrapper"> 
-                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide">
+                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide" v-for="item in education">
                                 <a class="education-item">
                                     <i class="fas fa-graduation-cap"></i>
                                     <div class="education-item-right">
-                                        <h3 class="education-item-title">Bahçeşehir Anatolian High School</h1>
-                                        <span class="education-item-year">2017-2020</span>
+                                        <h3 class="education-item-title">{{education.title}}</h1>
+                                        <span class="education-item-year">{{education.year}}</span>
                                     </div>
                                 </a>
                             </div>          
                          </div>
                         <div class="swiper-pagination"></div>
-                     </div>
+                    </div>
                     <div class="title"><span>Works</span></div>              
                     <div class="portfolio">
                         <div class="col-sm-12 col-lg-4 col-md-6" v-for="item in port">
@@ -96,5 +97,6 @@
 <script src="public/js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="public/js/main.js"></script>
 </html>
