--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <i class="fas fa-graduation-cap"></i>
                                     <div class="education-item-right">
                                         <h3 class="education-item-title">{{education.title}}</h1>
-                                        <span class="education-item-year">{{education.year}}</span>
+                                        <span class="education-item-year">{{education.years}}</span>
                                     </div>
                                 </a>
                             </div>          
