--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                                 <a class="education-item">
                                     <i class="fas fa-graduation-cap"></i>
                                     <div class="education-item-right">
-                                        <h3 class="education-item-title">{{education.title}}</h1>
-                                        <span class="education-item-year">{{education.years}}</span>
+                                        <h3 class="education-item-title">{{item.title}}</h1>
+                                        <span class="education-item-year">{{item.years}}</span>
                                     </div>
                                 </a>
                             </div>          
