--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
 <script src="public/js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="public/js/swiper-bundle.js"></script>
 <script src="public/js/main.js"></script>
 </html>
