--- a/index.html
+++ b/index.html
@@ -45,15 +45,24 @@
                     <div class="title"><span>Education</span></div>  
                      <div class="education swiper-container">
                         <div class="swiper-wrapper"> 
-                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide" v-for="item in education">
+                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide">
                                 <a class="education-item">
                                     <i class="fas fa-graduation-cap"></i>
                                     <div class="education-item-right">
-                                        <h3 class="education-item-title">{{item.title}}</h1>
-                                        <span class="education-item-year">{{item.years}}</span>
+                                        <h3 class="education-item-title">asd</h1>
+                                        <span class="education-item-year">asd</span>
                                     </div>
                                 </a>
-                            </div>          
+                            </div>         
+                            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12  swiper-slide">
+                                <a class="education-item">
+                                    <i class="fas fa-graduation-cap"></i>
+                                    <div class="education-item-right">
+                                        <h3 class="education-item-title">asd</h1>
+                                        <span class="education-item-year">asd</span>
+                                    </div>
+                                </a>
+                            </div>  
                          </div>
                         <div class="swiper-pagination"></div>
                     </div>
