--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="header">
             <div class="container d-flex justify-content-between align-items-center">
                 <div class="logo">
-                    <a href="index.html">#<span>SerhatG</span></a>
+                    <a href="https://serhatgundogdu.github.io">#<span>SerhatG</span></a>
                 </div>
                 
                 <div class="nav">
                     <ul id="menu">
-                        <li class="active"><a href="index.html">Anasayfa</a></li>
+                        <li class="active"><a href="mailto:serhat.gundogdu@outlook.com">Hire Me</a></li>
                     </ul>
                 </div>
                 <div class="mobile">
@@ -98,6 +98,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="public/js/swiper-bundle.js"></script>
-<script src="public/js/app.js"></script>
-<script src="public/js/main.js"></script>
+<script src="public/js/app.min.js"></script>
 </html>
